objgraph (1.8.1-1pexip1) pexip; urgency=low

  * Prepare Pexip packaging

 -- John-Mark Bell <jmb@pexip.com>  Mon, 14 Jul 2014 13:53:37 +0000

objgraph (1.8.1-1) unstable; urgency=medium

  [ Stefano Rivera ]
  * New upstream release.
  * Refresh patches.
  * Bump copyright years.
  * Add DEP-12 upstream metadata.

  [ Andrey Rahmatullin ]
  * Switch to pybuild.
  * Switch to debhelper compat level 9.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 19 Jun 2014 23:29:35 +0200

objgraph (1.8.0-1) unstable; urgency=medium

  * New upstream release (Closes: #741822)
  * Bump Standards-Version to 3.9.5, no changes needed.
  * The upstream changelog is now CHANGES.rst.
  * Patch: remove-external-images. Remove references to Travis CI's status
    image from the documentation.

 -- Stefano Rivera <stefanor@debian.org>  Sat, 12 Apr 2014 16:51:59 +0200

objgraph (1.7.2-2) unstable; urgency=low

  [ Jakub Wilk ]
  * Use canonical URIs for Vcs-* fields.

  [ Stefano Rivera ]
  * Upload to unstable, wheezy released.
  * Bump debhelper compat to 8.
  * Add autopkgtests.
  * Switch the debian/watch URL to https.
  * Don't ship SOURCES.txt.

 -- Stefano Rivera <stefanor@debian.org>  Sun, 26 May 2013 15:37:05 +0200

objgraph (1.7.2-1) experimental; urgency=low

  * New upstream release.
    - Tests pass on Python 3.3. (Closes: #686331)
    - Supports file formats besides png.
  * Upload to experimental, as Debian is frozen for wheezy.
  * Bump Standards-Version to 3.9.4.
    - Bump debhelper Build-Depends to 8.1 for build-{arch,indep} support.
  * Bump machine readable copyright format to 1.0.
  * Bump copyright years.

 -- Stefano Rivera <stefanor@debian.org>  Sat, 10 Nov 2012 18:59:27 +0200

objgraph (1.7.1-1) unstable; urgency=low

  * New upstream release.
    - Supports "setup.py test". We now use that, and Build-Depend on
      python-setuptools + python3-setuptools.
    - Drop utf8-changes.patch and quoting-py3k-utf8.patch: Superseded
      upstream.
  * Use dh_sphinxdoc.