@@ -6,7 +6,6 @@ XSBC-Pexip-Original-Maintainer: Debian Python Modules Team <python-modules-team@
 XSBC-Pexip-Original-Uploaders: Stefano Rivera <stefanor@debian.org>
 Build-Depends:
  debhelper (>= 9),
- dh-python,
  graphviz,
  python-all (>= 2.6.5-13~),
  python-setuptools,
